kubernetes/10-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: binance-bot
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: ${docker_username}/${docker_client_repository_name}
        imagePullPolicy: "Always"
        resources:
          requests:
            memory: 256Mi
            cpu: 200m
          limits:
            memory: 256Mi
            cpu: 200m
        ports:
        - containerPort: 80
