kubernetes/6-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: binance-bot
  labels:
    app: server
spec:
  replicas: $server_replica_count
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: $docker_username/$docker_server_repository_name
        imagePullPolicy: "Always"
        resources:
          limits:
            memory: 256Mi
            cpu: 200m
          requests:
            memory: 256Mi
            cpu: 200m
        ports:
        - containerPort: 3000
