kubernetes/8-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: binance-bot
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
