kubernetes/3-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
  namespace: binance-bot
  annotations:
    nginx.ingress.kubernetes.io/upstream-hash-by: $remote_addr
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-certificate
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ${app_server_addr}
    secretName: letsencrypt-certificate
  rules:
  - host: ${app_server_addr}
    http:
      paths:
      - path: /server/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: server
            port:
              number: 3000
