kubernetes/9-client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress
  namespace: binance_bot
  annotations:
    # kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-certificate
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ${app_server_addr}
    secretName: letsencrypt-certificate
  rules:
  - host: ${app_server_addr}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client
            port:
              number: 80
